added buttons to HTML, added js file

--- a/index.html
+++ b/index.html
@@ -121,15 +121,18 @@
         </div>
 
         <div class="span5">
-            <h1><a href="#" id="jobtitle1" class="job_title">Job Title</a></h1>
+            <h1 style="display:inline-block; margin-right:4%;"><a href="#" id="jobtitle1" class="job_title">Job Title</a></h1>
+            <button style="display:inline-block;" class="btn btn-danger" onclick="displayPopup()">Preview</button>
             <p id="company1" class="job_text">Company</p>
             <p id="jobdescription1" class="job_text">Job Description</p>
 
-            <h1><a href="#" id="jobtitle2" class="job_title">Job Title</a></h1>
+            <h1 style="display:inline-block; margin-right:4%;"><a href="#" id="jobtitle2" class="job_title">Job Title</a></h1>
+            <button style="display:inline-block;" class="btn btn-danger" onclick="displayPopup()">Preview</button>
             <p id="company2" class="job_text">Company</p>
             <p id="jobdescription2" class="job_text">Job Description</p>
 
-            <h1><a href="#" id="jobtitle3" class="job_title">Job Title</a></h1>
+            <h1 style="display:inline-block; margin-right:4%;"><a href="#" id="jobtitle3" class="job_title">Job Title</a></h1>
+            <button style="display:inline-block;" class="btn btn-danger" onclick="displayPopup()">Preview</button>
             <p id="company3" class="job_text">Company</p>
             <p id="jobdescription3" class="job_text">Job Description</p>
         </div>
@@ -145,6 +148,7 @@
    
    <!-- <script src = "spin.js"></script> -->
    <script src="./index.js"></script>
+   <script src="./popup.js"></script>
    <script src="./bootstrap/js/jquery.js"></script>
    <script src="./bootstrap/js/bootstrap-transition.js"></script>
    <script src="./bootstrap/js/bootstrap-alert.js"></script>
